--- a/niffler-e-2-e-tests/Dockerfile
+++ b/niffler-e-2-e-tests/Dockerfile
@@ -10,4 +10,4 @@ COPY ./build.gradle ./
 COPY ./settings.gradle ./
 COPY ./gradle.properties ./
 
-CMD ./gradlew test -Dtest.env=docker -Drepository=jpa -Duser.timezone=Europe/Moscow
+CMD ./gradlew test -p niffler-e-2-e-tests -Dtest.env=docker -Drepository=jpa -Duser.timezone=Europe/Moscow
