--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ include 'niffler-auth'
 include 'niffler-currency'
 include 'niffler-userdata'
 include 'niffler-spend'
+include 'niffler-ai'
 include 'niffler-grpc-common'
 include 'niffler-e-2-e-tests'
