--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,18 @@
 rootProject.name = 'niffler'
-include 'niffler-gateway'
-include 'niffler-auth'
-include 'niffler-currency'
-include 'niffler-userdata'
-include 'niffler-spend'
-include 'niffler-ai'
-include 'niffler-grpc-common'
-include 'niffler-e-2-e-tests'
+
+def modules = [
+        'niffler-gateway',
+        'niffler-auth',
+        'niffler-currency',
+        'niffler-userdata',
+        'niffler-spend',
+        'niffler-ai',
+        'niffler-grpc-common',
+        'niffler-e-2-e-tests'
+]
+
+modules.each { m ->
+    if (file(m).exists()) {
+        include m
+    }
+}
